--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "collectCoverageFrom": [
